Bug 234858: Make do_GetWeakReference typesafe. r=dbaron sr=bryner