modules/libpref/src/nsPrefBranch.cpp
@@ -635,7 +635,8 @@ NS_IMETHODIMP nsPrefBranch::AddObserver(const char *aDomain, nsIObserver *aObser
       nsMemory::Free(pCallback);
       return NS_ERROR_INVALID_ARG;
     }
-    observerRef = do_GetWeakReference(weakRefFactory);
+    nsCOMPtr<nsIWeakReference> tmp = do_GetWeakReference(weakRefFactory);
+    observerRef = tmp;
   } else {
     observerRef = aObserver;
   }
@@ -677,8 +678,10 @@ NS_IMETHODIMP nsPrefBranch::RemoveObserver(const char *aDomain, nsIObserver *aOb
      nsCOMPtr<nsISupports> observerRef;
      if (pCallback->bIsWeakRef) {
        nsCOMPtr<nsISupportsWeakReference> weakRefFactory = do_QueryInterface(aObserver);
-       if (weakRefFactory)
-         observerRef = do_GetWeakReference(aObserver);
+       if (weakRefFactory) {
+         nsCOMPtr<nsIWeakReference> tmp = do_GetWeakReference(aObserver);
+         observerRef = tmp;
+       }
      }
      if (!observerRef)
        observerRef = aObserver;
